--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,248 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en-US"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout}">
+      layout:decorate="~{layout}" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>microservices-template - Main Menu</title>
+    <meta charset="utf-8"/>
+    <title>eText Manager</title>
 </head>
 <body>
-    <div layout:fragment="content">
-        Hello, <span th:text="${userLoginId}">world</span>!
+<div layout:fragment="content">
+    <div class="rvt-p-tb-md">
+        <h1 id="tool-title" class="rvt-ts-36">eText Manager</h1>
     </div>
+
+    <div class="rvt-tabs" data-rvt-tabs="etext-tabset">
+        <div class="rvt-tabs__tablist" aria-label="eText tabs" data-rvt-tablist>
+            <button class="rvt-tabs__tab" data-rvt-tab>Upload CSV</button>
+            <button class="rvt-tabs__tab" data-rvt-tab>View Report</button>
+            <button class="rvt-tabs__tab" data-rvt-tab>Tool Info</button>
+        </div>
+        <div class="rvt-tabs__panel" data-rvt-tab-panel data-rvt-tab-init>
+            <span class="rvt-ts-23 rvt-text-bold">Upload a CSV</span>
+            <p>
+                Use the header listed below. You do not need to fill in every column with data, depending on the type of
+                placement you are uploading.
+
+                <dl class="rvt-list-description rvt-border-bottom rvt-p-bottom-md">
+                    <dt>CSV header</dt>
+                    <dd>Tool, New Name, SIS Course ID, Pressbook Title, Pressbook Link</dd>
+                </dl>
+            </p>
+            <form>
+                <div class="rvt-inline-alert rvt-inline-alert--standalone rvt-inline-alert--danger rvt-m-bottom-sm">
+                        <span class="rvt-inline-alert__icon">
+                            <svg fill="currentColor" width="16" height="16" viewBox="0 0 16 16"><path d="m8 6.586-2-2L4.586 6l2 2-2 2L6 11.414l2-2 2 2L11.414 10l-2-2 2-2L10 4.586l-2 2Z"></path><path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0ZM2 8a6 6 0 1 1 12 0A6 6 0 0 1 2 8Z"></path></svg>
+                        </span>
+                    <span class="rvt-inline-alert__message" id="bad-csv-header-message">The CSV header was not recognized. Check the file to make sure it has a supported header.</span>
+                </div>
+                <fieldset class="rvt-fieldset">
+                    <legend class="rvt-m-bottom-sm">CSV File Upload</legend>
+                    <div class="rvt-file" data-rvt-file-input="csv-file-input">
+                        <input type="file" data-rvt-file-input-button="csv-file-input" id="csv-file-input" aria-describedby="csv-file-description" required>
+                        <label for="csv-file-input" class="rvt-button rvt-button--secondary">
+                            <span>Upload CSV</span>
+                            <svg fill="currentColor" width="16" height="16" viewBox="0 0 16 16"><path d="M2 1h8.414L14 4.586V15H2V1Zm2 2v10h8V7.5H7.5V3H4Zm5.5 0v2.5H12v-.086L9.586 3H9.5Z"></path></svg>
+                        </label>
+                        <div class="rvt-file__preview" data-rvt-file-input-preview="csv-file-input" id="csv-file-description">
+                            No file selected
+                        </div>
+                    </div>
+                </fieldset>
+                <div class="rvt-button-group rvt-m-top-md">
+                    <button class="rvt-button">Submit</button>
+                </div>
+            </form>
+        </div>
+        <div class="rvt-tabs__panel" data-rvt-tab-panel>
+            <div class="rvt-button-group rvt-m-bottom-md">
+                <span class="rvt-ts-23 rvt-text-bold">View report</span>
+                <button class="rvt-button">Download Report</button>
+            </div>
+            <table id="appTable" class="rvt-table-stripes full-table-width">
+                <caption class="rvt-sr-only">Table with reports of various uploads</caption>
+                <thead>
+                <tr>
+                    <th scope="col">Uploader</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Tool</th>
+                    <th scope="col">Tool ID</th>
+                    <th scope="col">SIS Course ID</th>
+                    <th scope="col">Canvas Course ID</th>
+                    <th scope="col" class="small-column-width">Deployment ID</th>
+                </tr>
+                <tr>
+                    <th>Uploader</th>
+                    <th>Date</th>
+                    <th>Tool</th>
+                    <th></th>
+                    <th>SIS Course ID</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">kibayash</th>
+                    <td>2024-01-14</td>
+                    <td>Kritik</td>
+                    <td>458050</td>
+                    <td>FA23-BL-COLL-C103-5621</td>
+                    <td>2165416</td>
+                    <td>458050:e6e723abdeb5a64d7b8163b045c8259372e42f02</td>
+                </tr>
+                <tr>
+                    <th scope="row">gjthomas</th>
+                    <td>2023-12-20</td>
+                    <td>Cool LTI Tool</td>
+                    <td>638346</td>
+                    <td>SP24-IN-UITS-A123-4321</td>
+                    <td>8694505</td>
+                    <td>638346:f6e723abdeb5a64d7b8163b045c8259372e42f02</td>
+                </tr>
+                <tr>
+                    <th scope="row">agschmid</th>
+                    <td>2024-01-18</td>
+                    <td>Test Tool</td>
+                    <td>123456</td>
+                    <td>FA23-CO-CHEM-B333-8647</td>
+                    <td>1234567</td>
+                    <td>123456:g6e723abdeb5a64d7b8163b045c8259372e42f02</td>
+                </tr>
+                <tr>
+                    <th scope="row">kibayash</th>
+                    <td>2024-01-14</td>
+                    <td>Kritik</td>
+                    <td>458051</td>
+                    <td>FA23-BL-COLL-C103-5622</td>
+                    <td>2165417</td>
+                    <td>458051:z6e723abdeb5a64d7b8163b045c8259372e42f02</td>
+                </tr>
+                <tr>
+                    <th scope="row">kibayash</th>
+                    <td>2024-01-14</td>
+                    <td>Kritik</td>
+                    <td>458052</td>
+                    <td>FA23-BL-COLL-C103-5623</td>
+                    <td>2165418</td>
+                    <td>458052:x6e723abdeb5a64d7b8163b045c8259372e42f02</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="rvt-tabs__panel" data-rvt-tab-panel>
+            <span class="rvt-ts-23 rvt-text-bold">Tool information</span>
+            <p>
+                Note: If a row has a full, numeric value in the Client/Tab ID column, then it is a Client ID. Anything else should be considered a Tab ID.
+            </p>
+            <table id="toolInfoTable" class="rvt-table-stripes full-table-width">
+                <caption class="rvt-sr-only">Tool information table</caption>
+                <thead>
+                <tr>
+                    <th scope="col">Tool</th>
+                    <th scope="col" class="small-column-width">Client/Tab ID</th>
+                    <th scope="col">JSON</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">Kritik</th>
+                    <td>290000000000704</td>
+                    <td>
+                        <!-- can do something with JSON.stringify() to get a more proper json display -->
+                        "{
+                        ""name"": ""{{newToolName}}"",
+                        ""course_navigation"": {
+                        ""enabled"": true,
+                        ""placement"": ""course_navigation"",
+                        ""label"": ""Kritik-USA"",
+                        ""text"": ""Kritik-USA""
+                        }
+                        }"
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">Vista Higher Learning</th>
+                    <td>290000000000628</td>
+                    <td>
+                        "{
+                        ""name"": ""{{newToolName}}"",
+                        ""course_navigation"": {
+                        ""text"": ""Vista Higher Learning"",
+                        ""label"": ""Vista Higher Learning"",
+                        ""enabled"": true,
+                        ""default"": ""enabled""
+                        }
+                        }"
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">Access Pearson</th>
+                    <td>context_external_tool_464010</td>
+                    <td>
+                        "{
+                        ""hidden"": false
+                        }"
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</div>
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+    $(document).ready(function () {
+        $('#appTable').DataTable({
+            orderCellsTop: true,
+            initComplete: function () {
+                this.api()
+                .columns( [0, 2, 4] )
+                .every(function () {
+                    var column = this;
+                    var select = $('<select class="rvt-select"><option value="">All</option></select>')
+                        .appendTo($("#appTable thead tr:eq(1) th").eq(column.index()).empty())
+                        .on('change', function () {
+                            var val = $.fn.dataTable.util.escapeRegex($(this).val());
+                            column.search(val ? '^' + val + '$' : '', true, false).draw();
+                        })
+                        .on( 'click' , function (evt) {
+                            evt.stopPropagation();
+                        });
+
+                    column
+                        .data()
+                        .unique()
+                        .sort()
+                        .each(function (d, j) {
+                            select.append('<option value="' + d + '">' + d + '</option>');
+                        });
+                });
+
+                this.api()
+                .columns( [1] )
+                .every(function () {
+                    let column = this;
+                    var textinput = $('<input type="text" class="rvt-text-input" placeholder="Date">')
+                        .appendTo($("#appTable thead tr:eq(1) th").eq(column.index()).empty())
+                        .on('keyup', function () {
+                            var val = $.fn.dataTable.util.escapeRegex($(this).val());
+                                column.search(val).draw();
+                        });
+                })
+            }
+        });
+        var table = $('#appTable').DataTable();
+        table.columns.adjust().draw();
+
+        $('#toolInfoTable').DataTable({});
+        var tooltable = $('#toolInfoTable').DataTable();
+        tooltable.columns.adjust().draw();
+    });
+
+</script>
+</th:block>
 </body>
 </html>
