--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,45 +2,31 @@
 <html lang="en-US"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
-    <title>microservices-template - Home</title>
+    <title>eText Manager</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link media="all" rel="stylesheet" type="text/css" th:href="@{/app/jsrivet/rivet.min.css}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/app/jsrivet/rivet-icons.css}"/>
-    <link media="all" rel="stylesheet" type="text/css" th:href="@{/app/css/app.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/app/jsrivet/rivet.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/app/webjars/datatables/css/jquery.dataTables.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/app/css/etextmanager.css}"/>
 </head>
+
 <body>
 
-<div layout:fragment="content" class="rvt-container-xl" role="main">
-    Page content goes here
-    <!--
-        add something like this to the child page to complete the page layout
-
-        <div class="rvt-grid">
-            <div class="rvt-grid__item">
-                <span>Grid item</span>
-            </div>
-        </div>
-
-        See https://rivet.uits.iu.edu/components/layout/grid/ for options, depending on what's needed.
-    -->
-
+<div layout:fragment="content" class="rvt-container-xl rvt-p-top-sm" id="main-container" role="main" aria-labelledby="tool-title">
+    <!-- Page content goes here -->
 </div>
-
-
 
 <footer th:unless="${hideFooter}" class="rvt-ts-12 rvt-container-xl rvt-m-top-lg">
     <div id="footer" th:text="${@serverInfo}"></div>
 </footer>
 
 <script type="text/javascript" th:src="@{/app/jsrivet/rivet.min.js}"></script>
-<script defer th:src="@{/app/jsrivet/rivet-icons.js}"></script>
-<script type="module" th:src="@{/app/jsrivet/rivet-icon-element.js}"></script>
 <script type="text/javascript" th:src="@{/app/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/app/js/app.js}"></script>
+<script type="text/javascript" th:src="@{/app/webjars/datatables/js/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" th:src="@{/app/js/etextmanager.js}"></script>
 <script>
     Rivet.init();
 </script>
