LMSA-9072, LMSA-9073, LMSA-9074, LMSA-9075, LMSA-9205 - Add UI for tool config, add javadocs and comments

--- a/src/main/resources/templates/fragments/reports.html
+++ b/src/main/resources/templates/fragments/reports.html
@@ -44,12 +44,12 @@
         <caption class="rvt-sr-only">Table with reports of various uploads</caption>
         <thead>
         <tr>
-            <th scope="col">Batch ID</th>
-            <th scope="col">Uploader</th>
-            <th scope="col">Date</th>
-            <th scope="col">Filename</th>
-            <th scope="col">Tool</th>
-            <th scope="col">SIS Course ID</th>
+            <th scope="col" class="selectFilter selectFilterReverse">Batch ID</th>
+            <th scope="col" class="selectFilter">Uploader</th>
+            <th scope="col" class="inputFilter">Date</th>
+            <th scope="col" class="selectFilter">Filename</th>
+            <th scope="col" class="selectFilter">Tool</th>
+            <th scope="col" class="selectFilter">SIS Course ID</th>
             <th scope="col">Canvas Course ID</th>
             <th scope="col">Tool ID</th>
             <th scope="col">Deployment ID</th>
