LMSA-9209 - Add UI for CRUD of tool configs, various other code review cleanups

--- a/src/main/resources/templates/fragments/reports.html
+++ b/src/main/resources/templates/fragments/reports.html
@@ -44,7 +44,7 @@
         <caption class="rvt-sr-only">Table with reports of various uploads</caption>
         <thead>
         <tr>
-            <th scope="col" class="selectFilter selectFilterReverse">Batch ID</th>
+            <th scope="col" class="selectFilter selectFilterReverse numericSort">Batch ID</th>
             <th scope="col" class="selectFilter">Uploader</th>
             <th scope="col" class="inputFilter">Date</th>
             <th scope="col" class="selectFilter">Filename</th>
