LMSA-9231, LMSA-9225, LMSA-9226, LMSA-9227, LMSA-9230, LMSA-9228, LMSA-9229, LMSA-9295  UI enhancements, batch jobs for re-running imports and checking for reset courses  Migrate to the new datatable filter/ally extensions

--- a/src/main/resources/static/css/etextmanager.css
+++ b/src/main/resources/static/css/etextmanager.css
@@ -43,11 +43,6 @@
     overflow-wrap: break-word;
 }
 
-.button-heading::before {
-    content: 'View report';
-}
-
-
 .hover_focus:focus::after {
     content: attr(title);
     background-color: black;
@@ -64,51 +59,17 @@
     top: -5px;
     right: 125%;
 }
+
 /*
-rvt-icon2[data-tooltip]:hover::after {
-    content: attr(data-tooltip);
-    position: absolute;
-    background-color: #000;
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 5px;
-    top: 25px;
-    left: 50%;
-    transform: translateX(-50%);
-    white-space: nowrap;
-    z-index: 1;
+ * Adding values from datatables.buttons so we don't have to bring in the full css, which jacks up other rivet button-y things
+ */
+span.dt-button-spacer.bar {
+  border-left: 1px solid rgba(0, 0, 0, 0.3);
+  vertical-align: middle;
+  padding-left: 0.5em;
 }
-
-.msg-tooltip {
-    position: relative;
-    display: inline-block;
+span.dt-button-spacer.bar:empty {
+  height: 2em;
+  width: 1px;
+  padding-left: 0;
 }
-
-.msg-tooltip .msg-tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: white;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    top: -5px;
-    right: 110%;
-}
-
-.msg-tooltip .msg-tooltiptext::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 100%;
-    margin-top: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: transparent white transparent transparent;
-}
-.msg-tooltip:hover .msg-tooltiptext {
-    visibility: visible;
-}
-*/
